--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "babel.config.js",
   "scripts": {
     "build": "rimraf dist && webpack",
-    "dev": "webpack-dev-server --open --watch"
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
