--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "homepage": "https://github.com/olivcamj/web_project_4#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "autoprefixer": "^10.3.1",
+    "babel-loader": "^8.2.2",
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "file-loader": "^6.1.0",
@@ -34,7 +34,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.16.0",
     "rimraf": "^3.0.2"
   }
 }
