--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "babel.config.js",
   "scripts": {
-    "build": "rimraf dist && webpack",
+    "build": "webpack --mode development",
     "dev": "webpack serve"
   },
   "repository": {
@@ -22,11 +22,12 @@
     "@babel/preset-env": "^7.15.0",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "*",
     "css-loader": "^4.2.2",
     "cssnano": "^4.1.10",
     "file-loader": "^6.1.0",
-    "html-loader": "^1.3.0",
-    "html-webpack-plugin": "^4.4.1",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^0.11.0",
     "postcss-loader": "^3.0.0",
     "webpack": "^5.49.0",
@@ -34,7 +35,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "core-js": "^3.16.0",
-    "rimraf": "^3.0.2"
+    "core-js": "^3.16.0"
   }
 }
