--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "babel.config.js",
   "scripts": {
-    "dev": "webpack serve",
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -22,18 +23,18 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "autoprefixer": "^10.3.1",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "*",
-    "css-loader": "^6.2.0",
-    "cssnano": "^5.0.7",
+    "css-loader": "^7.1.2",
+    "cssnano": "^7.0.5",
     "file-loader": "^6.1.0",
-    "gh-pages": "^5.0.0",
-    "html-loader": "^2.1.2",
+    "gh-pages": "^6.1.1",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.2.0",
-    "postcss-loader": "^6.1.1",
+    "postcss-loader": "^8.1.1",
     "webpack": "^5.94.0",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
