--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "clean-webpack-plugin": "*",
     "css-loader": "^7.1.2",
     "cssnano": "^7.0.5",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "file-loader": "^6.1.0",
     "gh-pages": "^6.1.1",
     "html-loader": "^5.1.0",
